src/test/ui/did_you_mean/issue-37139.stderr
error[E0596]: cannot borrow immutable local variable `x` as mutable
  --> $DIR/issue-37139.rs:22:23
   |
22 |             test(&mut x); //~ ERROR cannot borrow immutable
   |                       ^
   |                       |
   |                       cannot reborrow mutably
   |                       try removing `&mut` here

error: aborting due to previous error

